--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-easy-edit": "^1.11.0",
     "react-materialize": "^3.9.3",
+    "react-modal": "^3.11.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
